--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-translator",
   "version": "0.1.0",
+  "homepage": "https://katharinecooney.github.io/yandex-translator-app/",
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
@@ -13,6 +14,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
