--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "dependencies": {
     "axios": "^0.19.0",
     "gh-pages": "^2.1.1",
-    "ibm-watson": "^4.3.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.0"
+    "react-scripts": "3.1.0",
+    "semantic-ui-react": "^0.87.3"
   },
   "scripts": {
     "start": "react-scripts start",
